packages/midi-markdown/midi_markdown-0.1.0.tar.gz/midi_markdown-0.1.0/tests/fixtures/invalid/invalid_cc_value.mmd
---
title: "Invalid CC Value"
---

# CC value must be 0-127
[00:00.000]
- cc 1.7.255
